# rust-gpu-bindless-template

./: Cargo.toml  LICENCE-MIT  readme.md  rustfmt.toml
my-app/: Cargo.toml  build.rs
my-app-shader/: Cargo.toml
my-app-shader/src/: color.rs  lib.rs  simple_compute.rs  triangle.rs
my-app/src/: lib.rs  main.rs  shader.rs  simple_compute.rs
