[workspace]
members = [
	"my-app",
	"my-app-shader"
]
resolver = "2"



[workspace.package]
version = "0.1.0"
authors = ["Firestar99"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Firestar99/rust-gpu-bindless-template"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))'] }



[workspace.dependencies]
# members
my-app-shader = { path = "my-app-shader" }

# rust-gpu-bindless
rust-gpu-bindless = { git = "https://github.com/Firestar99/rust-gpu-bindless.git", rev = "4842205084e538c5eaa73422286d321d1d8221e2", features = ["ash"] }
rust-gpu-bindless-macros = { git = "https://github.com/Firestar99/rust-gpu-bindless.git", rev = "4842205084e538c5eaa73422286d321d1d8221e2" }
rust-gpu-bindless-shaders = { git = "https://github.com/Firestar99/rust-gpu-bindless.git", rev = "4842205084e538c5eaa73422286d321d1d8221e2" }
rust-gpu-bindless-shader-builder = { git = "https://github.com/Firestar99/rust-gpu-bindless.git", rev = "4842205084e538c5eaa73422286d321d1d8221e2" }
rust-gpu-bindless-winit = { git = "https://github.com/Firestar99/rust-gpu-bindless.git", rev = "4842205084e538c5eaa73422286d321d1d8221e2" }

# vulkan
ash = "0.38.0"
winit = { version = "0.30" }

pollster = "0.4.0"

# bytes and numbers
glam = { version = "0.29.1", default-features = false, features = ["libm", "bytemuck"] }
bytemuck = { version = "1.13", features = ["min_const_generics"] }
bytemuck_derive = "1.4"

# other
smallvec = { version = "1.11", features = ["const_generics", "const_new", "union"] }
static_assertions = "1.1.0"
anyhow = "1.0"
num_enum = { version = "0.7.2", default-features = false }
approx = "0.5.1"





# Following is copied from rust-gpu workspace cargo.toml
# Enable incremental by default in release mode.
[profile.release]
incremental = true
# HACK(eddyb) this is the default but without explicitly specifying it, Cargo
# will treat the identical settings in `[profile.release.build-override]` below
# as different sets of `rustc` flags and will not reuse artifacts between them.
codegen-units = 256

# Compile build-dependencies in release mode with the same settings
# as regular dependencies (including the incremental enabled above).
[profile.release.build-override]
opt-level = 3
incremental = true
codegen-units = 256

# my additions to make build scripts always run in release, even on dev
[profile.dev]
incremental = true
codegen-units = 256

[profile.dev.build-override]
opt-level = 3
incremental = true
codegen-units = 256
